src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__concat_idents! (parse it_matches_2_tuple).snap
---
source: src/type_atoms/adt/tuple.rs
expression: "crate::parse::<(Ident, FIdent<\"world\">)>(q.clone())"
---
Ok(
    (
        Ident(
            hello,
        ),
        FIdent(
            Span,
        ),
    ),
)
