src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__concat_idents! (parse it_only_steps_back_on_fail_for_options).snap
---
source: src/type_atoms/adt/tuple.rs
expression: "crate::parse::<(Option<Ident>, Option<Punct>)>(q.clone())"
---
Ok(
    (
        Some(
            Ident(
                hi,
            ),
        ),
        None,
    ),
)
