src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__concat_idents! (parse it_steps_back_for_multi_tuples).snap
---
source: src/type_atoms/adt/tuple.rs
expression: "crate::parse::<(Option<Ident>, Option<Punct>, Option<Ident>,\n        Option<Punct>)>(q.clone())"
---
Ok(
    (
        Some(
            Ident(
                hi,
            ),
        ),
        Some(
            Punct {
                char: '<',
                spacing: Alone,
            },
        ),
        None,
        Some(
            Punct {
                char: '>',
                spacing: Alone,
            },
        ),
    ),
)
