src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__concat_idents! (parse it_steps_back_for_options).snap
---
source: src/type_atoms/adt/tuple.rs
expression: "crate::parse::<(Option<Ident>, Option<Punct>)>(q.clone())"
---
Ok(
    (
        None,
        Some(
            Punct {
                char: '<',
                spacing: Alone,
            },
        ),
    ),
)
