src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__concat_idents! (peek it_matches_2_tuple).snap
---
source: src/type_atoms/adt/tuple.rs
expression: "crate::test_peek::<P<(Ident, FIdent<\"world\">)>>(q.clone())"
---
Some(
    2,
)
