src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__concat_idents! (peek it_steps_back_for_options).snap
---
source: src/type_atoms/adt/tuple.rs
expression: "crate::test_peek::<P<(P<Option<Ident>>, P<Option<Punct>>)>>(q.clone())"
---
Some(
    1,
)
